created dynamic media screen that changes content to flex

--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
 
     <main>
 
-        <div class="left">
+        <div class="links">
             <a>About</a>
             <a>Docs</a>
         </div>
 
-        <button class="button newNote">New Note</button>
-        <button class="button darkTheme">Dark Theme</button>
+        <button class="new-note">New Note</button>
+        <button class="dark-theme">Dark Theme</button>
 
-        <div><textarea></textarea></div>
+        <textarea>Placeholder</textarea>
+
+        <button class="save">Save</button>
+        <button class="cancel">Cancel</button>
         
 
     </main>
