adjusted my notes header and img tags to make validator happy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <aside class="grid-menu">
-        <h1>My Notes</h1>
+        <h2>My Notes</h2>
         <ul>
             <li><a>Note 1</a></li>
             <li><a>Note 2</a></li>
@@ -46,8 +46,8 @@
 
         <h2>Keep In Touch</h2>
         <div>
-            <a><img src="images/linkedin_circle_color-512.webp"></a>
-            <a><img src="images/Internet_Line-02-512.webp"></a>
+            <a><img src="images/linkedin_circle_color-512.webp" alt="LinkedIn logo"></a>
+            <a><img src="images/Internet_Line-02-512.webp" alt="Our website logo"></a>
         </div>
 
     </footer>
