content now fills entire viewport

--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
             <a>Docs</a>
         </div>
 
-        <button class="new-note">New Note</button>
-        <button class="dark-theme">Dark Theme</button>
+        <div class="topButtons">
+            <button class="new-note">New Note</button>
+            <button class="dark-theme">Dark Theme</button>
+        </div>
 
         <textarea>Placeholder</textarea>
 
-        <button class="save">Save</button>
-        <button class="cancel">Cancel</button>
-        
+        <div class="bottomButtons">
+            <button class="save">Save</button>
+            <button class="cancel">Cancel</button>
+        </div>
 
     </main>
 
