--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
         <h2>Keep In Touch</h2>
         <div>
-            <a><img src="images/linkedin_circle_color-512.webp" alt="LinkedIn logo"></a>
-            <a><img src="images/Internet_Line-02-512.webp" alt="Our website logo"></a>
+            <a href="https://www.linkedin.com/"><img src="images/linkedin_circle_color-512.webp" alt="LinkedIn logo"></a>
+            <a href="https://www.google.com/"><img src="images/Internet_Line-02-512.webp" alt="Our website logo"></a>
         </div>
 
     </footer>
