--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css/stylesheet.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <title>Web Technologies Assignment</title>
+
 </head>
-<body class="grid-container">
+
+<body class="grid-container light-theme lightThemeText">
 
     <header>
         <h1>Take Better Notes</h1>
     </header>
 
-    <aside class="grid-menu">
+    <aside class="grid-menu light-theme2">
         <h2>My Notes</h2>
         <ul>
             <li><a>Note 1</a></li>
@@ -31,17 +38,13 @@
             <a>Docs</a>
         </div>
 
-        <div class="topButtons">
-            <button class="new-note">New Note</button>
-            <button class="dark-theme">Dark Theme</button>
-        </div>
+        <button id="new-note">New Note</button>
+        <button id="themeToggle">Dark Theme</button>
 
-        <textarea>Placeholder</textarea>
+        <textarea class="light-theme2 lightThemeText">Placeholder</textarea>
 
-        <div class="bottomButtons">
-            <button class="save">Save</button>
-            <button class="cancel">Cancel</button>
-        </div>
+        <button id="save">Save</button>
+        <button id="cancel">Cancel</button>
 
     </main>
 
@@ -55,6 +58,7 @@
 
     </footer>
     
-    
+    <script src="scripts/myScript.js"></script>
+
 </body>
 </html>
