new note and cancel buttons functionality implemented

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a>Docs</a>
         </div>
 
-        <button id="new-note">New Note</button>
+        <button id="newNote">New Note</button>
         <button id="themeToggle">Dark Theme</button>
 
         <textarea class="light-theme2 lightThemeText">Placeholder</textarea>
