--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <aside class="grid-menu light-theme2">
         <h2>My Notes</h2>
-        <ul>
+        <ul id="notesList">
             <li><a>Note 1</a></li>
             <li><a>Note 2</a></li>
         </ul>
